syntax = "proto3";

package wealth;

option csharp_namespace = "Wealth.BuildingBlocks";

message WalletIdProto {
  int32 id = 1;
}

message MoneyProto {
  CurrencyIdProto currency_id = 1;
  DecimalProto price = 2;
}

message CurrencyIdProto {
  string code = 1;
}

message DecimalProto {
  int64 units = 1;
  sfixed32 nanos = 2;
}